### Build 16 (until now)
- Give Empire +1 basket so that two vineyards can be build right away to fully
  saturate the first marble mine.
- Buttons that represent a toggable state are now really toggable buttons in
  the user interface.
- Changed the way compressed files are generated (maps, savegames) and read.
  Now it is possible to rename maps and savegames but it is not possible
  to load maps from version after this change with versions before this change
- Added a dotted frame border to the mini map.
- Improved and added many new animations for workers!
- Implemented teamview for allied players
- Implemented shared kingdom mode, where two or more players control the same
  player.
- Added two new maps.
- Added possibility to create and play multiplayer scenarios.
- Do not show building statistic informations of opposing players anymore
- Gave foresters more intelligence - now they do not remove young trees to
  replant another anymore and plant the trees that suit the terrain the best.
- Added host commands like /announce, /kick, ... (type /help in chat window
  to get a list of available commands).
- Improved defaultAI's behaviour.
- Added "real" work animations for builders and play "idle" animation, if
  the builder has nothing to do.
- Made Empire baracks more useful.
- Added player number user interface and automatic start position placement in
  random generated maps.
- Improved the heigth generation algorithm of the map autogenerator to produce
  more playable maps.
- Added notification messages for players, when military sites are occupied.
- Added teams (alliances can now be defined before start)
- Now the builder does nomore cause the finished building to see its vision
  range.
- Many improvements of the graphic rendering engine
- Implemented "stop storing", "out source", "prefare ware" settings for
  warehouses.
- Improved military site's and training site's user interface.
- Improved health bar and level icons for soldiers.