@@ -64,6 +64,7 @@ broadaxe=_Broad Axe
 bronzeaxe=_Bronze Axe
 cloth=_Cloth
 coal=_Coal
+felling_axe=_Felling Axe
 fire_tongs=_Fire Tongs
 fish=_Fish
 fishing_rod=_Fishing Rod
